syntax = "proto3";
import "nova/src/proto/engine_delta_value.proto";
import "nova/src/proto/system_delta.proto";
import "nova/src/proto/map_keys.proto";

message EngineDelta { // Next = 4
  EngineDeltaValue value = 1;
  map<string, SystemDelta> systems = 2;
  MapKeys systemsKeys = 3;
}

service EngineService {
  rpc Update(stream EngineDelta) returns (stream EngineDelta) {}
}