syntax = "proto3";
import "nova/src/proto/space_object_delta_value.proto";
import "nova/src/proto/outfit_delta.proto";
import "nova/src/proto/map_keys.proto";

/**
 * SpaceObjectDelta contains information on the location and movement
 * of an object in a system. This includes information on planets, 
 * ships, and (in the future) asteroids, and projectiles.
 */
message SpaceObjectDelta { // Next = 4
  SpaceObjectDeltaValue value = 1;
  map<string, OutfitDelta> outfits = 2;
  MapKeys outfitsKeys = 3;
}