syntax = "proto3";
import "nova/src/proto/system_delta_value.proto";
import "nova/src/proto/space_object_delta.proto";
import "nova/src/proto/map_keys.proto";

message SystemDelta { // Next = 4
  SystemDeltaValue value = 1;
  map<string, SpaceObjectDelta> spaceObjects = 2;
  MapKeys spaceObjectsKeys = 3;
}